--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
     "decompress": "^4.2.1",
     "decompress-targz": "^4.1.1",
     "node-fetch": "2.6.6",
-    "tar-fs": "^2.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4",
-    "unzip": "^0.1.11",
-    "zlib": "^1.0.5"
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/decompress": "^4.2.4",
